--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,19 @@
 {
+  "rewrites": [
+    {
+      "source": "/.well-known/apple-app-site-association",
+      "destination": "/apple-app-site-association"
+    }
+  ],
   "headers": [
     {
       "source": "/.well-known/apple-app-site-association",
       "headers": [
-        { "key": "Content-Type", "value": "application/json" }
+        {
+          "key": "Content-Type",
+          "value": "application/json"
+        }
       ]
     }
-  ],
-  "rewrites": [],
-  "redirects": []
+  ]
 }
