--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,15 @@
     {
       "source": "/.well-known/apple-app-site-association",
       "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/json"
-        }
+        { "key": "Content-Type", "value": "application/json" },
+        { "key": "Content-Disposition", "value": "inline" }
       ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/.well-known/apple-app-site-association",
+      "destination": "/.well-known/apple-app-site-association"
     }
   ]
 }
