--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,8 @@
     {
       "source": "/.well-known/apple-app-site-association",
       "headers": [
-        { "key": "Content-Type", "value": "application/json" },
-        { "key": "Content-Disposition", "value": "inline" }
+        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, proxy-revalidate" },
+        { "key": "Content-Type", "value": "application/json" }
       ]
     }
   ]
