--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,19 @@
 {
+  "rewrites": [
+    { "source": "/:path*", "destination": "/index.html" }
+  ],
   "headers": [
     {
       "source": "/.well-known/apple-app-site-association",
       "headers": [
-        { "key": "Cache-Control", "value": "no-store, no-cache, must-revalidate, proxy-revalidate" },
-        { "key": "Content-Type", "value": "application/json" }
+        { 
+          "key": "Cache-Control", 
+          "value": "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0" 
+        },
+        { 
+          "key": "Content-Type", 
+          "value": "application/json" 
+        }
       ]
     }
   ]
